--- a/src/index.css
+++ b/src/index.css
@@ -103,3 +103,7 @@ body,
     background: rgba(127, 255, 212, 0.3);
     pointer-events: none;
 }
+
+.node-tag-inner > span {
+    margin-left: 4px;
+}
